add GUI config and general cleanup